# Snake3D

./: .gitignore  Build.bat  CMakeLists.txt  GenerateProjectFiles.bat  HotReload.bat  README.md  RunGame.bat  premake5.lua
Client/Config/: Config.json
Client/Source/: Cell.h  Feed.cpp  Grid.cpp  Grid.h  LaunchApp.cpp  MainCamera.h  Snake.cpp  Snake.h
Docs/: README.md
Docs/Build.bat 사용법/: README.md
Docs/CMake에서 C++ 표준 설정하기/: README.md
Docs/GLFW 빌드하기/: README.md
Docs/GenerateProjectFiles.bat 사용법/: README.md
Docs/Git 커밋 취소하기/: README.md
Docs/HotReload.bat 사용법/: README.md
Docs/Premake5 프로젝트 종류를 설정하는 방법/: README.md
Docs/RunGame.bat 사용법/: README.md
Docs/[BUG] Shipping 모드에서만 실행되지 않는 버그/: README.md
Docs/[BUG] 와이어 프레임 렌더링 시 끝 부분을 이상하게 그리는 버그/: README.md
Docs/[MISC] Direct3D 11을 초기화하기 위한 참고 자료/: README.md
Docs/[MISC] Premake5 프로젝트 종류를 설정하는 방법/: README.md
Docs/[USAGE] Build.bat 사용법/: README.md
Docs/[USAGE] GenerateProjectFiles.bat 사용법/: README.md
Docs/[USAGE] HotReload.bat 사용법/: README.md
Docs/[USAGE] RunGame.bat 사용법/: README.md
Docs/게임 다운로드 및 플레이 방법/: README.md
Docs/그래픽스 참고 자료/: README.md
Docs/설치된 CMake 버전 확인하기/: README.md
Docs/알파 블랜딩 활성화 시 의도하지 않은 효과가 렌더링되는 버그/: README.md
Docs/프로젝트 개요/: README.md
Docs/프로젝트에서 사용할 라이브러리/: README.md
Engine/Config/: Config.json
Engine/Docs/: README.md
Engine/HLSL/: ColorMaterialPS.hlsl  ColorPassVS.hlsl  GlyphPassPS.hlsl
Engine/Script/: Build.bat  GenerateProjectFiles.bat  HotReload.bat
Engine/Source/Engine/: GameEngine.cpp
Engine/Source/Game/: GameEngine.cpp  GameEngine.h  IGameObject.cpp  IGameObject.h
Engine/Source/Manager/: AudioManager.cpp  InputManager.cpp  InputManager.h  ObjectManager.cpp  (+3 more)
GLSL/: DirectionalLight.frag  Framebuffer.frag  Framebuffer.vert  Geometry.frag  Geometry.vert  Glyph.frag  Glyph.vert  PointLight.frag  PointLight.vert  PostProcessing.frag  Skybox.frag  Skybox.vert  SpotLight.frag  shader.frag  shader.vert
HLSL/: ColorMaterialVS.hlsl  ColorPassPS.hlsl  GlyphPassVS.hlsl  PrimitiveShapePS.hlsl  ShapePassVS.hlsl  VertexShader.hlsl
Script/: Build.bat  GenerateProjectFiles.bat  HotReload.bat  RunGame.bat  ThirdParty.lua  client_project_config.lua  vs_solution_config.lua
Script/Batch/: HotReload.bat  RunGame.bat
Script/Lua/: client_project_config.lua  thirdparty_project_config.lua
Source/Core/: Application.cpp  AudioManager.cpp  AudioManager.h  Camera3D.cpp  Camera3D.h  ColorMaterial.h  CommandLine.cpp  FileHelper.h  GameTimer.cpp  GameTimer.h  GeometryGenerator.cpp  GeometryGenerator.h  IManager.h  InputManager.cpp  InputManager.h  Macro.h  MathHelper.h  Mesh.cpp  Mesh.h  MinidumpWriter.cpp  Model.cpp  Model.h  RenderManager.cpp  RenderManager.h  Sound.cpp  Sound.h  TTFont.cpp  TTFont.h  Vertex.h  Window.cpp  Window.h
Source/Engine/: GameEngine.cpp  GameEngine.h
Source/Game/: Application.cpp  Cell.h  DoneScene.cpp  DoneScene.h  Feed.cpp  Feed.h  Food.cpp  Food.h  GameCamera.cpp  GameCamera.h  Grid.cpp  Grid.h  LaunchApp.cpp  MainCamera.cpp  MainCamera.h  MovableCamera.cpp  MovableCamera.h  PlayScene.cpp  PlayScene.h  ReadyScene.cpp  ReadyScene.h  ScoreBoard.cpp  ScoreBoard.h  Snake.cpp  Snake.h  SpaceBackground.cpp  SpaceBackground.h
Source/GameEngine/: GameEngine.cpp  GameEngine.h
Source/GameObject/: Camera3D.cpp  Camera3D.h  DirectionalLight.cpp  DirectionalLight.h  IGameObject.cpp  IGameObject.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h  UIButton.cpp  UIButton.h  UIPanel.cpp  UIPanel.h
Source/Manager/: AudioManager.cpp  AudioManager.h  IManager.h  InputManager.cpp  InputManager.h  LogManager.cpp  LogManager.h  ObjectManager.cpp  ObjectManager.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h
Source/Matrix/: Matrix.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h
Source/Private/: Application.cpp  CommandLine.cpp  RenderManager.cpp  Window.cpp
Source/Public/: CommandLine.h  Macro.h  MathHelper.h  MinidumpWriter.h  RenderManager.h  StringHelper.h  Window.h
Source/Resource/: ColorMaterial.cpp  ColorMaterial.h  CubeMap.cpp  CubeMap.h  GeometryShader.cpp  GeometryShader.h  GlyphShader.cpp  GlyphShader.h  IResource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  TTFont.cpp  TTFont.h
Source/Scene/: IScene.cpp  IScene.h
Source/Shader/: ColorMaterialShader.cpp  ColorMaterialShader.h  ColorPassShader.cpp  ColorPassShader.h  ColorShader.h  GlyphPassShader.cpp  GlyphPassShader.h  IShader.cpp  IShader.h  PixelShader.hlsl  PrimitiveShapeShader.cpp  PrimitiveShapeShader.h  Shader.cpp  Shader.h  ShapePassShader.cpp  ShapePassShader.h  VertexShader.hlsl
Source/Utility/: Assertion.h  CommandLine.cpp  CommandLine.h  FileSystem.cpp  FileSystem.h  GameTimer.cpp  GeometryGenerator.cpp  GeometryGenerator.h  Logging.h  Macro.h  MinidumpWriter.cpp  MinidumpWriter.h  Random.cpp  Random.h  String.cpp  String.h  Vertex.h  Window.cpp  Window.h
Source/Utils/: CommandLine.cpp  FileHelper.h  GameTimer.cpp  GeometryGenerator.cpp  GeometryGenerator.h  Macro.h  MinidumpWriter.cpp  MinidumpWriter.h  Window.cpp
Source/Vector/: Vector.h  Vector2.h  Vector3.h
Source/Windows/: MinidumpWriter.cpp  MinidumpWriter.h
(+11 files in other folders)
